css tweaks to fix X-axis scrollbar appearing on smaller screens

--- a/src/Hoc/Layout/Layout.module.css
+++ b/src/Hoc/Layout/Layout.module.css
@@ -1,6 +1,8 @@
 .LayoutWrapper {
   width: 100%;
+  max-width: 100%;
   height: auto;
+  overflow: hidden;
 }
 
 .Content {
