--- a/src/containers/Slider/Slider.module.css
+++ b/src/containers/Slider/Slider.module.css
@@ -2,10 +2,9 @@
   background: url('../../assets/sliderBackground.jpg');
   background-size: cover;
   position: relative;
-  width: 100%;
+  min-width: 100%;
   height: 100vh;
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
